# apikit

./: .gitignore  README.md  SPEC.md  STRUCTURE.md  __init__.py  build.bat  build.sh  checklist.md  pyproject.toml  tasks.md  transformer.py  verify_optimization.py
.github/workflows/: build-rust.yml
apistd/: __init__.py  transformer.py
apistd/config/: __init__.py  default.py  schema.py
apistd/core/: __init__.py  exceptions.py  response.py  status.py
apistd/debug/: __init__.py  collector.py  logger.py  panel.py
apistd/extensions/: __init__.py  database.py  pagination.py  validation.py
apistd/formats/: __init__.py  registry.py
apistd/framework/: __init__.py  compat.py  fastapi.py  flask.py
apistd/middleware/: __init__.py  request_id.py
apistd/migration/: __init__.py  adapter.py  wrapper.py
config/: __init__.py  default.py  schema.py
core/: __init__.py  constants.py  exceptions.py  response.py  status.py
debug/: __init__.py
docs/: COMPARISON.md
example/: README.md  fastapi_example.py  flask_example.py  flask_native.py  requirements.txt
extensions/: __init__.py  pagination.py  validation.py
formats/: __init__.py  alibaba.py  registry.py
framework/: __init__.py  base.py  compat.py  fastapi.py  flask.py
middleware/: __init__.py  debug.py  request_id.py  timer.py
migration/: __init__.py  adapter.py  wrapper.py
optimization/: __init__.py
optimization/async_opt/: __init__.py  batched.py  streaming.py  thread_pool.py
optimization/backend/: __init__.py  python_backend.py  rust_backend.py  selector.py
optimization/backend/rust_backend/: Cargo.toml
optimization/backend/rust_backend/src/: lib.rs
optimization/cache/: __init__.py  lru.py  memory.py
optimization/memory/: __init__.py  arena.py  view.py  zero_copy.py
optimization/schema/: __init__.py  cache.py  compiler.py  validator.py
optimization/serializer/: __init__.py  fast_json.py  orjson_backend.py  simd_json.py
tests/: README_STRESS_TEST.md  quick_test.py  stress_test.py  test_init.py  test_performance.py
