[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_backend"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
